Got the post route working. working on the patch route
